# Image2Prompt

./: .dockerignore  .env.example  .gitignore  README.md  package.json
.github/workflows/: AWS_001_Destroy_Network.yml  AWS_001_Setup_Network.yml  AWS_002_Destroy_Secrets.yml  AWS_002_Setup_Secrets.yml  AWS_003_Destroy_Database.yml  AWS_003_Setup_Database.yml  AWS_004_Destroy_Registry.yml  AWS_004_Setup_Registry.yml  AWS_005_Destroy_Compute.yml  AWS_005_Setup_Compute.yml  AWS_006_Destroy_Portals.yml  AWS_006_Setup_Portals.yml  AWS_007_Destroy_Cache.yml  AWS_007_Setup_Cache.yml  AWS_1000_All_Setup_Image2Prompt.yml  AWS_1001_All_Destroy_Image2Prompt.yml  ci.yml
DevOps/AWS/cloudformation/: 001-network.yaml  002-secrets.yaml  003-database.yaml  004-registry.yaml  005-compute.yaml  006-portals.yaml  007-cache.yaml
DevOps/Local/: .env.example  all-down.sh  all-status.sh  docker-all-up.sh  portals-start-all.sh  portals-status-all.sh  portals-stop-all.sh  services-start-all.sh  services-status-all.sh  services-stop-all.sh  shutdown-all.sh
DevOps/Local/Observability/grafana/: docker-compose.yaml
DevOps/Local/lib/: common.sh
DevOps/Local/postgres/: docker-compose.yaml
infra/: .env.example  docker-compose.yml
infra/postgres/: init-databases.sh
libs/img2pmpt-caf-routers/: pyproject.toml
libs/img2pmpt-caf-routers/img2pmpt_caf_routers/: __init__.py  config.py
libs/img2pmpt-caf-routers/img2pmpt_caf_routers/client/: dtos.py  interfaces.py  router_client.py
libs/img2pmpt-caf-routers/img2pmpt_caf_routers/provider_impls/: __init__.py  factory.py  interfaces.py  litellm_provider.py  openrouter_provider.py
libs/img2pmpt-caf-routers/tests/: test_router_client.py
libs/img2pmpt-caf-secret/: pyproject.toml
libs/img2pmpt-caf-secret/img2pmpt_caf_secret/: __init__.py  config.py
libs/img2pmpt-caf-secret/img2pmpt_caf_secret/client/: dtos.py  interfaces.py  secret_client.py
libs/img2pmpt-caf-secret/img2pmpt_caf_secret/provider_impls/: __init__.py  aws_secrets_provider.py  azure_keyvault_provider.py  env_file_provider.py  factory.py  gcp_secret_manager_provider.py  interfaces.py
libs/img2pmpt-caf-secret/tests/: test_secret_client.py
portals/: Dockerfile  default.conf.template  nginx.conf
portals/admin-portal/: .gitignore  angular.json  package.json
portals/admin-portal/src/: index.html  styles.scss
portals/customer-portal/: angular.json  package.json
portals/customer-portal/src/: index.html  styles.scss
services/admin-service/: Dockerfile  alembic.ini  requirements.txt
services/admin-service/alembic/: env.py
services/admin-service/app/: config.py  deps.py  di.py  main.py  masking.py  models.py  schemas.py  seed.py  tech_stacks.py
services/admin-service/tests/: test_admin.py
services/ai-adapters/: Dockerfile  requirements.txt
services/ai-adapters/app/: config.py  di.py  main.py  registry.py  schemas.py
services/ai-adapters/tests/: test_invoke.py
services/customer-service/: Dockerfile  requirements.txt
services/customer-service/alembic/: env.py
services/customer-service/app/: config.py  db.py  deps.py  di.py  main.py  models.py  schemas.py
services/customer-service/tests/: test_auth.py  test_billing.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: config.py  main.py  ratelimit.py
services/gateway/tests/: test_gateway.py
services/image-processing-service/: Dockerfile  alembic.ini  requirements.txt
services/image-processing-service/alembic/: env.py
services/image-processing-service/app/: config.py  di.py  main.py  models.py  orchestrator.py  schemas.py
services/image-processing-service/tests/: test_image_flow.py
services/kb-service/: Dockerfile  alembic.ini  requirements.txt
services/kb-service/alembic/: env.py
services/kb-service/app/: config.py  db.py  deps.py  di.py  main.py  models.py  schemas.py  tech_stacks.py
services/kb-service/tests/: test_kb.py
services/shared/: pyproject.toml
services/shared/image2prompt_shared/: __init__.py  api_errors.py  auth_dep.py  base.py  config_sources.py  crypto.py  db.py  dtos.py  http_client.py  layers.py  logging_config.py  observability.py  request_context.py  scheduler.py  security.py  settings.py  singleton.py
services/shared/image2prompt_shared/storage/: __init__.py  base.py  cloud.py  local.py  stubs.py
(+186 files in other folders)
