[project]
name = "img2pmpt-caf-secret"
version = "0.1.0"
description = "Image2Prompt Common Application Framework — secrets. Provider-agnostic secret access (env / AWS Secrets Manager / Azure Key Vault / GCP Secret Manager) behind one client interface, selected by feature toggle."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# Cloud SDKs are optional and imported lazily; install only what you deploy with.
aws = ["boto3>=1.34"]
azure = ["azure-identity>=1.17", "azure-keyvault-secrets>=4.8"]
gcp = ["google-cloud-secret-manager>=2.20"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["img2pmpt_caf_secret*"]
