[project]
name = "image2prompt-shared"
version = "0.1.0"
description = "Shared library for Image2Prompt microservices (db, auth, storage, settings)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
# OTLP exporter is optional; observability degrades to no-op without it.
otlp = ["opentelemetry-exporter-otlp>=1.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["image2prompt_shared*"]
