[project]
name = "image2prompt-shared"
version = "0.1.0"
description = "Shared library for Image2Prompt microservices (db, auth, storage, settings)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
]

[project.optional-dependencies]
# Cloud storage SDKs are optional and imported lazily; install per deploy target.
s3 = ["boto3>=1.34"]
azure-blob = ["azure-storage-blob>=12.20", "azure-identity>=1.17"]
gcs = ["google-cloud-storage>=2.18"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["image2prompt_shared*"]
